feat: list model assets
